# pangrowth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  requirements.txt
data/: core_q90_ecoli_n200.txt  core_q90_ecoli_n50.txt  growth_ecoli_n12.txt  growth_ecoli_n200.txt  growth_ecoli_n50.txt  hist_ecoli_n12.txt  hist_ecoli_n200.txt  hist_ecoli_n50.txt  panmatrix_ecoli_n48.txt
scripts/: build_ggcat_cpp_api.sh  plot_core.py  plot_growth.py  plot_hist.py
src/: ggcat-colormap.h  ggcat-infix.h  hill.h  khashl.h  kmer.h  pangrowth.cpp  size_pangenome.h  yak-core.h  yak-hist.h  yak-infix-telomer.h  yak-infix.h
